<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name" translatable="false">Scala Vault</string>
    <string name="wallet_activity_name">Wallet</string>
    <string name="menu_mobileminer">Mobile Miner</string>
    <string name="menu_about">About</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>
    <string name="menu_receive">Receive</string>
    <string name="menu_rename">Rename&#8230;</string>
    <string name="menu_archive">Delete</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_changepw">Change Passphrase</string>
    <string name="password_weak">Continue typing&#8230;</string>
    <string name="password_fair">Meh&#8230;</string>
    <string name="password_good">C\'mon, you can do better!</string>
    <string name="password_strong">Getting there&#8230;</string>
    <string name="password_very_strong">Yeah baby, h4x0r style!</string>
    <string name="label_login_wallets">Wallets</string>
    <string name="label_credits">Credits</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_close">Close</string>
    <string name="label_wallet_advanced_details">Touch for detailed information</string>
    <string name="label_send_success">Successfully sent</string>
    <string name="label_send_done">Done</string>
    <string name="label_receive_info_gen_qr_code">Touch for QR Code</string>
    <string name="info_xlato_enabled">BTC payment enabled, tap for more info.</string>
    <string name="info_ledger_enabled">Ledger enabled, tap for more info.</string>
    <string name="ScalaLink" translatable="false">&lt;a href=&quot;https://scala.network&quot;&gt;Scala&lt;/a&gt;</string>
    <string name="monerujoLink" translatable="false">&lt;a href=&quot;https://github.com/m2049r/xmrwallet&quot;&gt;monerujo&lt;/a&gt;</string>
    <string name="info_send_xlato_success_order_label">XLA.TO Order</string>
    <string name="info_send_xlato_success_btc">%1$s BTC</string>
    <string name="info_send_xlato_paid">Confirmation Pending</string>
    <string name="info_send_xlato_unpaid">Payment Pending</string>
    <string name="info_send_xlato_error">XLA.TO Error (%1$s)</string>
    <string name="info_send_xlato_sent">BTC Sent!</string>
    <string name="info_send_xlato_query">Querying&#8230;</string>
    <string name="info_send_xlato_parms"><![CDATA[
        <b>You can send %1$s &#8212; %2$s BTC</b>.<br/>
        <i><b>XLA.TO</b> is giving you an exchange rate of <b>%3$s BTC</b> <u>right now</u></i>.
    ]]></string>
    <string name="info_send_xlato_zeroconf"><![CDATA[
        <i>Amounts up to <b>%1$s BTC</b> will be sent <u>instantly</u>!</i>
    ]]></string>
    <string name="send_available_btc">Balance: %2$s BTC (%1$s XLA)</string>
    <string name="info_paymentid_integrated">&#x2714; Payment ID integrated</string>
    <string name="info_prepare_tx">Preparing your transaction</string>
    <string name="label_send_progress_xlato_create">Creating XLA.TO Order</string>
    <string name="label_send_progress_xlato_query">Querying XLA.TO Order</string>
    <string name="label_send_progress_create_tx">Preparing Scala Transaction</string>
    <string name="label_send_progress_queryparms">Querying XLA.TO parameters</string>
    <string name="label_generic_xlato_error">XLA.TO ERROR</string>
    <string name="text_generic_xlato_error">Code: %1$d</string>
    <string name="text_retry">Touch to retry</string>
    <string name="text_noretry_scala">Now we\'re stuck here!</string>
    <string name="text_noretry">Uh-oh, XLA.TO does not seem be available right now!</string>
    <string name="text_send_btc_amount">%1$s BTC = %2$s XLA</string>
    <string name="text_send_btc_rate">(Rate: %1$s BTC/XLA)</string>
    <string name="label_send_btc_xlato_info">Visit xla.to for support &amp; tracking</string>
    <string name="label_send_btc_xlato_key_lb">Secret Key\nXLA.TO</string>
    <string name="label_send_btc_xlato_key">XLA.TO Secret Key</string>
    <string name="label_send_btc_address">Destination BTC Address</string>
    <string name="label_send_btc_amount">Amount</string>
    <string name="label_send_txid">Transaction ID</string>
    <string name="label_send_address">Destination Address</string>
    <string name="label_send_payment_id">Payment ID</string>
    <string name="label_send_notes">Notes</string>
    <string name="backup_progress">Backup in progress</string>
    <string name="archive_progress">Archive in progress</string>
    <string name="rename_progress">Rename in progress</string>
    <string name="changepw_progress">Change Password in progress</string>
    <string name="service_progress">Wrapping things up&#8230;\nThis can take a while!</string>
    <string name="backup_success">Backup successful</string>
    <string name="backup_failed">Backup failed!</string>
    <string name="archive_failed">Archive failed!</string>
    <string name="rename_failed">Rename failed!</string>
    <string name="changepw_failed">Change Password failed!</string>
    <string name="changepw_success">Password changed</string>
    <string name="label_daemon">Node</string>
    <string name="connect_stagenet" translatable="false">Stagenet</string>
    <string name="connect_testnet" translatable="false">Testnet</string>
    <string name="status_wallet_loading">Loading Wallet&#8230;</string>
    <string name="status_wallet_unloaded">Wallet saved</string>
    <string name="status_wallet_unload_failed">Wallet save failed!</string>
    <string name="status_wallet_connecting">Connecting&#8230;</string>
    <string name="status_wallet_connect_failed">Node connection failed!\nCheck username/password</string>
    <string name="status_wallet_connect_wrongversion">Node version incompatible - please upgrade!</string>
    <string name="status_wallet_node_invalid">Invalid node!\nTry another.</string>
    <string name="status_wallet_connect_ioex">Cannot reach node!\nTry again or another.</string>
    <string name="status_wallet_disconnected">Disconnected</string>
    <string name="status_transaction_failed">Transaction failed: %1$s</string>
    <string name="send_xlato_timeout">You waited too long my friend!</string>
    <string name="service_busy">I am still busy with your last wallet&#8230;</string>
    <string name="prompt_rename">Rename %1$s</string>
    <string name="prompt_changepw">New Passphrase for %1$s</string>
    <string name="prompt_changepwB">Repeat Passphrase for %1$s</string>
    <string name="prompt_password">Password for %1$s (optional)</string>
    <string name="prompt_fingerprint_auth">You can also open wallet using fingerprint.\nPlease touch sensor.</string>
    <string name="prompt_send_password">Confirm Password</string>
    <string name="prompt_open_wallet">Opening the wallet&#8230;</string>
    <string name="bad_fingerprint">Fingerprint not recognized. Try again.</string>
    <string name="bad_password">Incorrect password!</string>
    <string name="bad_saved_password">Saved password is incorrect.\nPlease enter password manually.</string>
    <string name="bad_wallet">Wallet does not exist!</string>
    <string name="prompt_daemon_missing">Remote nodes unreachable. Make sure your are connected to the internet.</string>
    <string name="prompt_wrong_net">Wallet does not match selected net</string>
    <string name="label_watchonly">(Watch Only)</string>
    <string name="label_wallet_receive">Receive</string>
    <string name="label_wallet_send">Give</string>
    <string name="xla_unconfirmed_amount">%1$s XLA unconfirmed</string>
    <string name="service_description">Scala Vault</string>
    <string name="status_synced">Synced:</string>
    <string name="status_remaining">blocks remaining</string>
    <string name="status_syncing">Scanning:</string>
    <string name="message_strorage_not_writable">External Storage is not writable! Panic!</string>
    <string name="message_strorage_not_permitted">We really need those External Storage permissions!</string>
    <string name="message_camera_not_permitted">No camera = No QR scanning!</string>
    <string name="label_copy_viewkey">View Key</string>
    <string name="label_copy_address">Public Address</string>
    <string name="label_copy_xlatokey">XLA.TO Key</string>
    <string name="message_copy_viewkey">View Key copied to clipboard!</string>
    <string name="message_copy_xlatokey">XLA.TO Key copied to clipboard!</string>
    <string name="message_copy_address">Wallet Address copied to clipboard!</string>
    <string name="message_copy_txid">Transaction ID copied to clipboard!</string>
    <string name="message_nocopy">Copy disabled for security reasons!</string>
    <string name="message_exchange_failed">Cannot get exchange rate!\nUse XLA/XLA or try again</string>
    <string name="generate_title">Create Wallet</string>
    <string name="generate_name_hint">Wallet Name</string>
    <string name="generate_password_hint">Password (optional)</string>
    <string name="prompt_password_hint">Password (Leave empty if none)</string>
    <string name="generate_fingerprint_hint">Allow to open wallet using fingerprint</string>
    <string name="generate_fingerprint_warn"><![CDATA[
        <strong>Fingerprint Authentication</strong>
        <p>With fingerprint authentication enabled, you can view wallet balance and receive funds
        without entering password.</p>
        <p>But for additional security, Scala Vault will still require you to enter password when
        viewing wallet details or sending funds.</p>
        <strong>Security Warning</strong>
        <p>Finally, Scala Vault wants to remind you that anyone who can get your fingerprint will be
        able to peep into your wallet balance.</p>
        <p>For instance, a malicious user around you can open your wallet when you are asleep.</p>
        <strong>Are you sure to enable this function?</strong>
    ]]></string>
    <string name="generate_bad_passwordB">Passphrases do not match</string>
    <string name="generate_empty_passwordB">Passphrase may not be empty</string>
    <string name="generate_buttonGenerate">Make me a wallet already!</string>
    <string name="generate_button_accept">I have noted the mnemonic seed</string>
    <string name="generate_wallet_name">Give me a name!</string>
    <string name="generate_wallet_exists">Wallet exists!</string>
    <string name="generate_wallet_dot">Cannot begin with .</string>
    <string name="generate_wallet_creating">Creating wallet</string>
    <string name="tx_id">TX ID</string>
    <string name="tx_key">TX Key</string>
    <string name="tx_destination">Destination</string>
    <string name="tx_destination_btc">Destination\n(BTC)</string>
    <string name="tx_paymentId">Payment ID</string>
    <string name="tx_blockheight">Block</string>
    <string name="tx_amount_btc">Amount\n(BTC)</string>
    <string name="tx_transfers">Transfers</string>
    <string name="tx_notes">Notes</string>
    <string name="tx_notes_hint">(optional)</string>
    <string name="tx_account">Subaddress #</string>
    <string name="menu_info">Show Secrets!</string>
    <string name="menu_StealthMode">Stealth Mode</string>
    <string name="menu_rescan">Rescan!</string>
    <string name="address_book">Address Book</string>
    <string name="start_mining">Start mining on your Android device safely and efficiently with the Scala Mobile Miner.</string>
    <string name="mobile_miner">Mobile Miner</string>
    <string name="download">Download</string>
    <string name="scala_logo" translatable="false">Scala Logo</string>
    <string name="credits">Credits</string>
    <string name="credits_made_with">Made with </string>
    <string name="credits_by"> by </string>
    <string name="credits_forked_from">Forked from </string>
    <string name="credits_heart" translatable="false">heart icon</string>
</resources>